// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ChromeNavItem should not render nav item 1`] = `<div />`;

exports[`ChromeNavItem should render nav item 1`] = `
<div>
  <li
    class="pf-v6-c-nav__item chr-c-navigation__item"
    data-ouia-component-id="Foo"
    data-ouia-component-type="PF6/NavItem"
    data-ouia-safe="true"
  >
    <a
      class="pf-v6-c-nav__link chr-c-navigation__item"
      data-quickstart-id="foo"
      data-testid="router-link"
      href="/foo"
      itemid="/foo"
    >
      <span
        class="pf-v6-c-nav__link-text"
      >
        Foo
         
      </span>
    </a>
  </li>
</div>
`;

exports[`ChromeNavItem should render nav item with a node title 1`] = `
<div>
  <li
    class="pf-v6-c-nav__item chr-c-navigation__item"
    data-ouia-component-id="[object Object]"
    data-ouia-component-type="PF6/NavItem"
    data-ouia-safe="true"
  >
    <a
      class="pf-v6-c-nav__link chr-c-navigation__item"
      data-quickstart-id="foo"
      data-testid="router-link"
      href="/foo"
      itemid="/foo"
    >
      <span
        class="pf-v6-c-nav__link-text"
      >
        <span
          data-testid="test-span"
        >
          Node title
        </span>
         
      </span>
    </a>
  </li>
</div>
`;

exports[`ChromeNavItem should render nav item with an external icon 1`] = `
<div>
  <li
    class="pf-v6-c-nav__item chr-c-navigation__item"
    data-ouia-component-id="Foo"
    data-ouia-component-type="PF6/NavItem"
    data-ouia-safe="true"
  >
    <a
      class="pf-v6-c-nav__link chr-c-navigation__item"
      data-quickstart-id="/foo"
      data-testid="native-link"
      href="/foo"
      itemid="/foo"
      rel="noreferrer noopener"
      target="_blank"
    >
      <span
        class="pf-v6-c-nav__link-text"
      >
        Foo
         
        <span
          class="pf-v6-c-icon pf-m-inline"
        >
          <span
            class="pf-v6-c-icon__content"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              width="1em"
            >
              <svg
                class="pf-v6-icon-default"
                viewBox="0 0 512 512"
              >
                <path
                  d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
                />
              </svg>
              <svg
                class="pf-v6-icon-rh-ui"
                viewBox="0 0 32 32"
              >
                <path
                  d="M28.5 2h-25C2.673 2 2 2.673 2 3.5v25c0 .827.673 1.5 1.5 1.5h25c.827 0 1.5-.673 1.5-1.5v-25c0-.827-.673-1.5-1.5-1.5Zm-3.375 17a1.125 1.125 0 0 1-2.25 0v-8.284L11.796 21.795a1.122 1.122 0 0 1-1.592 0 1.127 1.127 0 0 1 0-1.591l11.08-11.08H13a1.125 1.125 0 0 1 0-2.25h10.5c.896 0 1.625.729 1.625 1.625v10.5Z"
                />
              </svg>
            </svg>
          </span>
        </span>
      </span>
    </a>
  </li>
</div>
`;

exports[`ChromeNavItem should render nav item with beta badge 1`] = `
<div>
  <li
    class="pf-v6-c-nav__item chr-c-navigation__item"
    data-ouia-component-id="Foo"
    data-ouia-component-type="PF6/NavItem"
    data-ouia-safe="true"
  >
    <a
      class="pf-v6-c-nav__link chr-c-navigation__item"
      data-quickstart-id="foo"
      data-testid="router-link"
      href="/foo"
      itemid="/foo"
    >
      <span
        class="pf-v6-c-nav__link-text"
      >
        Foo
         
        <div
          style="display: contents;"
        >
          <span
            class="pf-v6-c-icon pf-m-inline chr-c-navigation__beta-icon"
          >
            <span
              class="pf-v6-c-icon__content"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 448 512"
                width="1em"
              >
                <path
                  d="M437.2 403.5L320 215V64h8c13.3 0 24-10.7 24-24V24c0-13.3-10.7-24-24-24H120c-13.3 0-24 10.7-24 24v16c0 13.3 10.7 24 24 24h8v151L10.8 403.5C-18.5 450.6 15.3 512 70.9 512h306.2c55.7 0 89.4-61.5 60.1-108.5zM137.9 320l48.2-77.6c3.7-5.2 5.8-11.6 5.8-18.4V64h64v160c0 6.9 2.2 13.2 5.8 18.4l48.2 77.6h-172z"
                />
              </svg>
            </span>
          </span>
        </div>
      </span>
    </a>
  </li>
</div>
`;
